--- a/slideBusinessCard.html
+++ b/slideBusinessCard.html
@@ -1,4 +1,4 @@
-<!-- 模仿山羊の前端小窝 https://space.bilibili.com/266664645 -->
+<!-- copy from 山羊の前端小窝 https://space.bilibili.com/266664645 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,8 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>琥菌Huginn</title>
+    <link rel="stylesheet" href="./css/slideBusinessCard.css">
 </head>
 <body>
-    
+    <div class="a">
+        <div class="b">
+            <a href="###">琥菌Huginn</a>
+            <h2>WeChat:Huginn_W</h2>
+            <span>I'm a front-end developer enthusiast,<br>I'm learning</span>
+        </div>
+        <div class="c">
+            <div class="d" style="--i:1;--w:1.5"></div>
+            <div class="d" style="--i:2;--w:1.6"></div>
+            <div class="d" style="--i:3;--w:1.4"></div>
+            <div class="d" style="--i:4;--w:1.7"></div>
+            <div class="e" style="--i:1"></div>
+        </div>
+
+        <div class="f"></div>
+    </div>
 </body>
 </html>
