提交.gitignore文件并修改slideBusinessCard.ss

--- a/slideBusinessCard.html
+++ b/slideBusinessCard.html
@@ -13,7 +13,7 @@
         <div class="b">
             <a href="###">琥菌Huginn</a>
             <h2>WeChat:Huginn_W</h2>
-            <span>I'm a front-end developer enthusiast,<br>I'm learning</span>
+            <span>I'm a front-end developer enthusiast,<br>I'm learning new knowledge every day to share with you,<br>I hope in the days to come<br>Keep going!!</span>
         </div>
         <div class="c">
             <div class="d" style="--i:1;--w:1.5"></div>
